--- a/src/styles/homeScreen.scss
+++ b/src/styles/homeScreen.scss
@@ -1,16 +1,6 @@
 @import './mixins';
 @import './variables';
-
-.homeScreen {
-  background-image: url('../images/back.jpg');
-  background-size: cover;
-}
-.homeScreen-main {
-  background-color: rgba(256, 256, 256, 0.2);
-  border: 1px solid white;
-  color: white;
-}
-.homeScreen-main-resume-button {
+.homeScreen-banner-resume-button {
   padding: 20px 35px 18px 35px;
   background: linear-gradient(
     -135deg,
@@ -25,13 +15,44 @@
   letter-spacing: 2px;
   border-radius: 2px;
 }
-.homeScreen-main-resume-button:hover {
+.homeScreen-banner-resume-button:hover {
   border-radius: 36px;
 }
+.left-banner {
+  border-left: 1px solid rgba(255, 255, 255, 0.432);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.432);
+  border-radius: 30px 0px 30px 3px;
+  width: 98%;
+}
+.homeScreen-banner-left {
+  width: 300px;
+}
+.homeScreen-banner-right {
+  width: 400px;
+  min-width: 400px;
+  margin-left: 50px;
+}
 .homeScreen-banner-content {
-  max-width: 500px;
-  letter-spacing: 1px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  border: 1px solid white;
+  display: flex;
+  align-items: center;
+  padding-bottom: 10px;
+}
+.homeScreen-profile-picture {
+  height: 300px;
+  width: 300px;
+  border-radius: 50%;
+  border: 3px solid rgba(256, 256, 256, 0.7);
+}
+
+@media screen and (max-width: 800px) {
+  .homeScreen-banner-right {
+    padding-top: 30px;
+    margin-left: 0px;
+    text-align: justify;
+  }
+}
+@media screen and (min-width: 800px) {
+  .homeScreen-banner {
+    padding-left: 30px;
+  }
 }
