--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,16 @@
 @import './styles/variables';
 @import './styles/mixins';
 
+.row {
+  --bs-gutter-x: none;
+  --bs-gutter-y: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: none;
+  margin-right: none;
+  margin-left: none;
+}
+
 * {
   margin: 0px;
   padding: 0px;
@@ -15,30 +25,54 @@ html,
 #root {
   height: 100%;
   width: 100%;
+  color: white;
+  letter-spacing: 1px;
 }
 
+.app {
+  background-image: url('./images/back2.jpg');
+  background-size: cover;
+  overflow-y: scroll;
+  padding-top: 200px;
+}
+.app::-webkit-scrollbar {
+  width: 15px;
+  background-color: rgba(0, 0, 0, 0.432);
+  border-radius: 5px;
+  border: 1px solid white;
+}
 .screen {
-  @include fluid;
   @include flex-row;
   justify-content: center;
+  margin-bottom: 36px;
 }
 .screen-main {
-  height: 100%;
   width: 100%;
   max-width: 1200px;
-  background-color: white;
 }
 .screen-banner {
-  height: 100%;
   width: 100%;
-  padding: 300px 0 200px 30px;
-  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  padding: 30px;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.56);
+  max-width: 1200px;
+  margin: auto;
+}
+.left-banner {
+  border-left: 1px solid rgba(255, 255, 255, 0.432);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.432);
+  border-radius: 30px 0px 30px 3px;
+  width: 98%;
+}
+.right-banner {
+  border-right: 1px solid rgba(255, 255, 255, 0.432);
+  border-top: 1px solid rgba(255, 255, 255, 0.432);
+  border-radius: 0px 30px 3px 30px;
 }
 .screen-footer {
   display: flex;
   justify-content: center;
-  background-color: white;
-
   height: 164px;
   width: 100%;
   padding: 70px 0 61px 0;
@@ -50,4 +84,16 @@ html,
   padding-right: 30px;
   display: flex;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 800px) {
+  .app {
+    padding-top: 100px;
+  }
+  .screen-banner {
+    width: 95%;
+    margin: auto;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
