--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -8,8 +8,9 @@
   align-items: center;
   height: 50px;
   padding-left: 15px;
-  padding-right: 15px;
+  padding-right: 25px;
   position: fixed;
+  transition: all 0.2s ease-in;
 }
 .header-nav {
   @include flex-row;
@@ -23,13 +24,11 @@
   align-items: center;
 }
 .header-nav-item {
-  color: white;
   text-transform: capitalize;
   font-weight: bold;
   margin-left: 8px;
   cursor: pointer;
 }
-
 .icon-container {
   height: 40px;
   width: 40px;
@@ -38,7 +37,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: white;
   margin-right: 8px;
   border-radius: 50%;
   background-color: white;
