--- a/src/index.scss
+++ b/src/index.scss
@@ -33,7 +33,6 @@ html,
   background-image: url('./images/back2.jpg');
   background-size: cover;
   overflow-y: scroll;
-  padding-top: 200px;
 }
 .app::-webkit-scrollbar {
   width: 15px;
@@ -41,29 +40,31 @@ html,
   border-radius: 5px;
   border: 1px solid white;
 }
-.screen {
+.app-main {
   @include flex-row;
   justify-content: center;
   margin-bottom: 36px;
+  height: 100%;
 }
-.screen-main {
+.app-main-content {
   width: 100%;
-  max-width: 1200px;
+  max-width: 1250px;
+  height: 100%;
 }
 .screen-banner {
-  width: 100%;
+  width: 98%;
   display: flex;
-  padding: 30px;
+  flex-direction: column;
+  padding: 30px 30px 0px 30px;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.56);
-  max-width: 1200px;
   margin: auto;
 }
 .left-banner {
+  margin-top: 124px;
   border-left: 1px solid rgba(255, 255, 255, 0.432);
   border-bottom: 1px solid rgba(255, 255, 255, 0.432);
   border-radius: 30px 0px 30px 3px;
-  width: 98%;
 }
 .right-banner {
   border-right: 1px solid rgba(255, 255, 255, 0.432);
@@ -76,6 +77,7 @@ html,
   height: 164px;
   width: 100%;
   padding: 70px 0 61px 0;
+  border-top: 1px solid rgba(255, 255, 255, 0.432);
 }
 .screen-footer-content {
   width: 100%;
@@ -88,7 +90,7 @@ html,
 
 @media screen and (max-width: 800px) {
   .app {
-    padding-top: 100px;
+    padding-top: 74px;
   }
   .screen-banner {
     width: 95%;
