--- a/src/styles/contactScreen.scss
+++ b/src/styles/contactScreen.scss
@@ -1,4 +1,11 @@
 .contactScreen {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100%;
   flex-direction: column;
   align-items: center;
+  margin-bottom: unset;
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
