--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -6,17 +6,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 50px;
+  padding-top: 8px;
+  padding-bottom: 8px;
   padding-left: 15px;
   padding-right: 25px;
   position: fixed;
-  transition: all 0.2s ease-in;
+  transition: background-color 0.3s ease-in;
 }
 .header-nav {
   @include flex-row;
   justify-content: space-between;
   width: 100%;
   max-width: 1170px;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 .header-nav-items,
 .header-nav-socials {
@@ -56,4 +59,7 @@
 .gh-icon {
   height: 25px;
   width: 25px;
+}
+
+@media screen and (max-width: 800px) {
 }
