--- a/src/styles/contactScreen.scss
+++ b/src/styles/contactScreen.scss
@@ -2,10 +2,35 @@
   display: flex;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: 475px;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   margin-bottom: unset;
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 250px;
+  padding-bottom: 350px;
+}
+.contactScreen > h3 {
+  color: #ffc272;
+  margin-bottom: 8px;
+}
+p.mail {
+  font-size: 32px;
+  margin-bottom: 6px !important;
+}
+p.call {
+  margin-bottom: 0px !important;
+  color: #939393;
+}
+p.phone {
+  font-size: 18px;
+}
+img.imessage {
+  height: 26px;
+  width: 26px;
+  margin-left: 6px;
+}
+p.phone i {
+  font-size: 20px;
+  margin-right: 6px;
 }
