--- a/src/styles/homeScreen.scss
+++ b/src/styles/homeScreen.scss
@@ -9,6 +9,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
+  margin-bottom: 10px;
 }
 .homeScreen-profile-picture {
   height: 300px;
@@ -24,6 +25,7 @@
   min-width: 390px;
   margin-left: 50px;
   margin-top: 30px;
+  margin-bottom: 10px;
 }
 .homeScreen-banner-content {
   display: flex;
