--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -42,15 +42,15 @@
   align-items: center;
   margin-right: 8px;
   border-radius: 50%;
-  background-color: white;
-  box-shadow: rgba(0, 0, 0, 0.3) inset 10px 10px 5px,
-    rgba(0, 0, 0, 0.3) inset -10px -10px 5px;
+  background-color: rgba(256, 256, 256, 0.4);
+  box-shadow: rgba(255, 255, 255, 0.3) inset 10px 10px 5px,
+    rgba(255, 255, 255, 0.3) inset -10px -10px 5px;
   transition: all 0.2s ease-in;
 }
 .icon-container:hover {
-  background-color: rgb(240, 240, 240);
+  background-color: rgba(240, 240, 240, 0.8);
   box-shadow: rgba(248, 248, 248, 0.829) inset 1px 1px 5px,
-    rgba(73, 73, 73, 0.5) inset -1px -1px 5px;
+    rgba(255, 255, 255, 0.788) inset -1px -1px 5px;
 }
 .icon {
   height: 20px;
