--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -30,7 +30,9 @@
 .project-display-demo {
   height: 300px;
   width: 300px;
-  background-color: blue;
+
+  margin-bottom: 16px;
+  background-color: rgb(103, 103, 167);
 }
 .project-display-content {
   max-width: 425px;
@@ -44,6 +46,49 @@
   display: flex;
 }
 .project-display-link {
+  margin-right: 8px;
+  text-align: center;
+  display: inline-block;
+  position: relative;
+  color: #fff;
+  text-transform: capitalize;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  padding: 10px 0px;
+  width: 150px;
+  border-radius: 6px;
+  overflow: hidden;
+  transition: all 0.2s linear 0s;
+  background-color: rgba(0, 0, 0, 0.232);
+  border: 1px solid rgba(255, 255, 255, 0.432);
+  cursor: pointer;
+
+  &::before {
+    content: '\f0a4';
+    font-family: FontAwesome;
+    font-size: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    right: -40px;
+    width: 40px;
+    height: 100%;
+    background-color: rgba(white, 0.3);
+    border-radius: 0px 6px 6px 0px;
+    transition: all 0.2s linear 0s;
+    text-align: center;
+  }
+
+  &:hover {
+    text-indent: -30px;
+
+    &:before {
+      right: 0;
+      text-indent: 0px;
+    }
+  }
 }
 .project-display-right {
   margin-top: 16px !important;
