--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -11,6 +11,7 @@
   padding-left: 15px;
   padding-right: 25px;
   position: fixed;
+  z-index: 1000;
   transition: 0.1s all ease-in;
 }
 .header-nav {
