--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -53,7 +53,7 @@
   height: 300px;
   width: 300px;
   margin-bottom: 16px;
-  background-color: rgb(103, 103, 167);
+  background-color: rgba(255, 255, 255, 0.3);
 }
 .project-display-content {
   max-width: 425px;
@@ -81,8 +81,7 @@
   border-radius: 6px;
   overflow: hidden;
   transition: all 0.2s linear 0s;
-  background-color: rgba(0, 0, 0, 0.232);
-  border: 1px solid rgba(255, 255, 255, 0.432);
+  background-color: rgba(175, 175, 175, 0.232);
   cursor: pointer;
   z-index: 0;
 
@@ -99,11 +98,9 @@
     width: 40px;
     height: 100%;
     background-color: rgba(white, 0.3);
-    border-radius: 0px 6px 6px 0px;
-    transition: all 0.2s linear 0s;
+    transition: all 0.2s linear 0s, background-color 0.15s 0.15s ease-out;
     text-align: center;
     padding-top: 5px;
-    filter: none;
   }
 
   &:hover {
@@ -112,7 +109,7 @@
     &:before {
       right: 0;
       text-indent: 0px;
-      filter: drop-shadow(0px 0px 0px rgb(255, 55, 238));
+      background-color: rgba(255, 125, 125, 0.479);
     }
   }
 }
