--- a/src/index.scss
+++ b/src/index.scss
@@ -49,7 +49,9 @@ hr {
   background-image: url('./images/back2.jpg');
   background-size: cover;
   background-position: center;
+  overflow-x: hidden;
   overflow-y: scroll;
+  scroll-behavior: smooth;
 }
 .app::-webkit-scrollbar {
   width: 6px;
@@ -84,7 +86,6 @@ hr {
 .left-banner {
   margin-top: 124px;
   border-left: 1px solid rgba(255, 255, 255, 0.432);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.432);
   border-radius: 30px 0px 30px 3px;
 }
 .right-banner {
