Internal links, smooth scrolling, and url names

--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -5,6 +5,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 40px;
+  margin-top: -40px;
 }
 .projects > h6 {
   display: inline-block;
