--- a/src/index.scss
+++ b/src/index.scss
@@ -34,6 +34,15 @@ hr {
   opacity: unset;
 }
 
+a {
+  color: unset;
+  text-decoration: unset;
+
+  &:hover {
+    color: unset;
+  }
+}
+
 ::-moz-selection {
   /* Code for Firefox */
   color: black;
