--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -32,6 +32,14 @@
   font-weight: bold;
   margin-left: 8px;
   cursor: pointer;
+  color: rgba(256, 256, 256, 0.4);
+  transition: color 0.2s linear;
+  &:hover {
+    color: white;
+  }
+}
+.header-nav-item-active {
+  color: white;
 }
 .icon-container {
   height: 40px;
