--- a/src/styles/contactScreen.scss
+++ b/src/styles/contactScreen.scss
@@ -9,6 +9,9 @@
   margin-bottom: unset;
   padding-top: 250px;
   padding-bottom: 350px;
+  position: relative;
+  top: 18px;
+  opacity: 0%;
 }
 .contactScreen > h3 {
   color: #ffc272;
