--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -5,6 +5,9 @@
   width: 100%;
   padding: 70px 0 61px 0;
   border-top: 1px solid rgba(255, 255, 255, 0.432);
+  position: relative;
+  top: 18px;
+  opacity: 0%;
 }
 .screen-footer-content {
   width: 100%;
