--- a/src/styles/homeScreen.scss
+++ b/src/styles/homeScreen.scss
@@ -6,6 +6,7 @@
   padding-top: 100px;
   padding-left: 40px;
   padding-bottom: 100px;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
@@ -17,6 +18,9 @@
   width: 300px;
   border-radius: 50%;
   border: 3px solid rgba(256, 256, 256, 0.7);
+  opacity: 0%;
+  position: relative;
+  top: 18px;
 }
 .homeScreen-banner-right {
   display: flex;
@@ -26,6 +30,9 @@
   margin-left: 50px;
   margin-top: 30px;
   margin-bottom: 10px;
+  opacity: 0%;
+  position: relative;
+  left: 18px;
 }
 .homeScreen-banner-content {
   display: flex;
