--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -21,6 +21,9 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 8px;
+  position: relative;
+  top: 18px;
+  opacity: 0%;
 }
 .section-title-container h3 {
   font-size: 36px;
@@ -46,6 +49,9 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 16px;
+  position: relative;
+  top: 18px;
+  opacity: 0%;
 }
 .project-display-title {
   color: white;
@@ -120,6 +126,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  position: relative;
+  top: 18px;
+  opacity: 0%;
 }
 .project-display-right > .container {
   display: flex;
