--- a/src/index.scss
+++ b/src/index.scss
@@ -19,6 +19,10 @@
   box-sizing: border-box;
 }
 
+html {
+  overscroll-behavior-y: none;
+}
+
 body,
 html,
 .app,
@@ -70,7 +74,6 @@ html::-webkit-scrollbar-thumb {
   height: 10px;
   width: 10px;
 }
-
 .background {
   background-image: url('./images/back2.jpg');
   background-size: cover;
