gh-pages can run npm run deploy to build application and deploy to github pages

--- a/src/index.scss
+++ b/src/index.scss
@@ -75,7 +75,7 @@ html::-webkit-scrollbar-thumb {
   width: 10px;
 }
 .background {
-  background-image: url('./images/back2.jpg');
+  background-image: url('https://github.com/samqchau/portfolio-v1.0.0/blob/gh-pages/pngs/back2.jpg?raw=true');
   background-size: cover;
   background-position: center;
   height: 100vh;
