--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -94,7 +94,7 @@
   z-index: 0;
 
   &::before {
-    content: url('../images/link_64.png');
+    content: url('https://github.com/samqchau/portfolio-v1.0.0/blob/gh-pages/pngs/link_64.png?raw=true');
     font-family: FontAwesome;
     font-size: 15px;
     display: flex;
