--- a/src/styles/scrollDownIndicator.scss
+++ b/src/styles/scrollDownIndicator.scss
@@ -17,9 +17,12 @@
 
 #scroll-down {
   display: block;
-  position: relative;
+  position: fixed;
   padding-top: 79px;
   text-align: center;
+  z-index: 1000;
+  bottom: 0%;
+  left: 50%;
 }
 .arrow-down {
   display: block;
