--- a/src/styles/returnToTop.scss
+++ b/src/styles/returnToTop.scss
@@ -5,7 +5,7 @@
   background-color: rgba(255, 255, 255, 0.132);
   transition: all 0.2s linear;
   cursor: pointer;
-  display: flex;
+  display: none;
   justify-content: center;
   align-items: center;
   bottom: 0px;
