--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -6,13 +6,15 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 8px;
+  padding-top: 36px;
   padding-bottom: 8px;
   padding-left: 15px;
   padding-right: 25px;
   position: fixed;
   z-index: 1000;
+  height: 62px;
   transition: 0.1s all ease-in;
+  background-color: rgba(0, 0, 0, 0);
 }
 .header-nav {
   @include flex-row;
@@ -71,4 +73,7 @@
 }
 
 @media screen and (max-width: 800px) {
+  .header {
+    padding-top: 6px !important;
+  }
 }
