Project section title animated

--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -16,7 +16,7 @@
 }
 .section-title-container {
   width: 100%;
-  height: fit-content;
+  height: 42px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,7 +54,7 @@
 .project-display-title {
   color: white;
   height: fit-content;
-  font-size: 24px;
+  font-size: 36px;
 }
 .project-display-demo {
   height: 300px;
