--- a/src/styles/contactScreen.scss
+++ b/src/styles/contactScreen.scss
@@ -2,13 +2,11 @@
   display: flex;
   align-items: center;
   width: 100%;
-  height: 475px;
+  height: 500px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin-bottom: unset;
-  padding-top: 250px;
-  padding-bottom: 350px;
   position: relative;
   top: 18px;
   opacity: 0%;
@@ -16,6 +14,8 @@
 .contactScreen > h3 {
   color: #ffc272;
   margin-bottom: 8px;
+  transition: 0.1s all;
+  position: relative;
 }
 p.mail {
   font-size: 32px;
