--- a/src/styles/scrollDownIndicator.scss
+++ b/src/styles/scrollDownIndicator.scss
@@ -20,7 +20,7 @@
   position: fixed;
   padding-top: 79px;
   text-align: center;
-  z-index: 1000;
+  z-index: -1;
   bottom: 0%;
   left: 50%;
   transform: translateX(-50%);
@@ -39,8 +39,8 @@
   padding: 0;
   width: 8px;
   height: 8px;
-  border-right: 2px solid rgb(102, 102, 102);
-  border-top: 2px solid rgb(102, 102, 102);
+  border-right: 2px solid rgb(255, 255, 255);
+  border-top: 2px solid rgb(255, 255, 255);
   -moz-transform: rotate(135deg);
   -webkit-transform: rotate(135deg);
   -o-transform: rotate(135deg);
@@ -51,7 +51,7 @@
   display: block;
   text-transform: uppercase;
   font-size: 14px;
-  color: rgba(256, 256, 256, 0.4);
+  color: white;
   letter-spacing: 0.1em;
 }
 #scroll-down::before {
@@ -73,7 +73,7 @@
   margin-left: -2px;
   width: 2px;
   height: 60px;
-  background: rgb(102, 102, 102);
+  background: rgb(255, 255, 255);
   content: ' ';
 }
 @-webkit-keyframes elasticus {
