--- a/src/styles/contactScreen.scss
+++ b/src/styles/contactScreen.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   width: 100%;
-  height: 500px;
+  height: 520px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -37,4 +37,18 @@ img.imessage {
 p.phone i {
   font-size: 20px;
   margin-right: 6px;
+}
+p.phone,
+p.mail {
+  cursor: pointer;
+  padding: 1px 10px 1px 10px;
+  transition: 0.1s background-color;
+}
+
+p.phone:hover,
+p.mail:hover {
+  background-color: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  padding: 0px 10px;
 }
