Contact screen info copy animation completed, project screen - scroll trigger values updated

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,7 +22,8 @@
 }
 
 html {
-  overscroll-behavior-y: none;
+  overscroll-behavior-y: none !important;
+  overscroll-behavior-x: none !important;
 }
 
 body,
