--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -10,7 +10,8 @@
   padding-bottom: 8px;
   padding-left: 15px;
   padding-right: 25px;
-  position: fixed;
+  position: sticky;
+  top: 0px;
   z-index: 1000;
   height: 56px;
   background-color: rgba(0, 0, 0, 0);
