--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -210,7 +210,7 @@
     display: flex;
   }
   .section-title-container h3 {
-    font-size: 18px;
+    font-size: 1.3rem;
   }
   .project-display-content-header {
     text-align: center;
