--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -40,6 +40,7 @@
   padding: 40px;
   min-width: 400px;
   width: 100%;
+  align-items: center;
 }
 .project-display-left {
   display: flex;
@@ -63,8 +64,10 @@
   background-color: rgba(255, 255, 255, 0.3);
 }
 .project-display-content {
+  padding: 0px 10px;
   max-width: 425px;
-  min-width: 394px;
+  min-width: 320px;
+  width: 100%;
   margin: 16px;
 }
 .project-display-content-header {
@@ -127,8 +130,11 @@
   align-items: center;
   position: relative;
   top: 18px;
-  background-color: rgba(0, 0, 0, 0.3);
+  padding: 24px 6px;
+  background-color: rgba(83, 83, 83, 0.3);
   opacity: 0%;
+  height: fit-content;
+  border-radius: 5px;
 }
 .project-display-right > .container {
   display: flex;
@@ -180,6 +186,10 @@
   }
 }
 @media screen and (max-width: 576px) {
+  .project-display-right {
+    background-color: unset;
+    padding: unset;
+  }
   .project-display-right > .container > hr {
     display: block;
   }
@@ -188,7 +198,7 @@
     padding-bottom: 8px;
   }
   .project-display-right > .container > .container > h6 {
-    width: 110px;
+    width: 100%;
     min-width: 110px;
     display: inline-block;
     margin-right: 8px;
