--- a/src/styles/scrollDownIndicator.scss
+++ b/src/styles/scrollDownIndicator.scss
@@ -284,6 +284,9 @@
   }
 }
 @media screen and (max-width: 480px) {
+  #wrapper {
+    display: none;
+  }
   #scroll-title {
     display: none;
   }
