JT demo linked and transparent background max width set

--- a/src/index.scss
+++ b/src/index.scss
@@ -112,6 +112,7 @@ html::-webkit-scrollbar-thumb {
   align-items: center;
   background-color: rgba(0, 0, 0, 0.56);
   margin: auto;
+  max-width: 1280px;
 }
 .left-banner {
   border-left: 1px solid rgba(255, 255, 255, 0.432);
