--- a/src/index.scss
+++ b/src/index.scss
@@ -140,3 +140,8 @@ html::-webkit-scrollbar-thumb {
     margin-top: 24px;
   }
 }
+@media screen and (max-width: 800px) {
+  .screen-banner {
+    padding: 56px 30px 0px 30px;
+  }
+}
