--- a/src/styles/homeScreen.scss
+++ b/src/styles/homeScreen.scss
@@ -15,10 +15,11 @@
   height: 300px;
   width: 300px;
   border-radius: 50%;
-  border: 3px solid rgba(256, 256, 256, 0.7);
+  border: 1px solid rgba(256, 256, 256, 0.5);
   opacity: 0%;
   position: relative;
   top: 18px;
+  background-image: url()
 }
 .homeScreen-banner-right {
   display: flex;
