--- a/src/index.scss
+++ b/src/index.scss
@@ -124,12 +124,15 @@ html::-webkit-scrollbar-thumb {
   border-top: 1px solid rgba(255, 255, 255, 0.432);
   border-radius: 0px 30px 3px 30px;
 }
+
+
 @media screen and (max-width: 800px) {
   .screen-banner {
     width: 95%;
-    margin: auto;
     flex-direction: column;
     justify-content: center;
+    padding: 56px 30px 0px 30px;
+    margin: auto;
   }
   .homeScreen {
     padding-top: 0px;
@@ -140,8 +143,13 @@ html::-webkit-scrollbar-thumb {
     margin-top: 24px;
   }
 }
-@media screen and (max-width: 800px) {
+
+@media screen and (max-width: 450px) {
   .screen-banner {
-    padding: 56px 30px 0px 30px;
+    width: 100%;
+    padding: 56px 0px 0px 0px;
+    margin: unset;
+    border-radius: unset;
+    border: unset;
   }
 }
